fixing bug related to overflowing div - added word wrapping (break word) for long tweets without spaces

--- a/TwiMini/src/main/webapp/w8_admin/bootstrap/css/bootstrap.css
+++ b/TwiMini/src/main/webapp/w8_admin/bootstrap/css/bootstrap.css
@@ -8,6 +8,10 @@
  * Designed and built with all the love in the world @twitter by @mdo and @fat.
  */
 
+.text{
+    word-wrap:break-word;
+}
+
 .TwoPxInput {
     width: 2px;
     padding: 0px 0px 0px 0px;
